<resources>
    <string name="app_name">popular movies</string>
    <string name="most_popular">most popular</string>
    <string name="highest_rated">highest rated</string>
    <string name="date">Date</string>
    <string name="overview">Overview</string>
    <string name="film_poster">film poster</string>
    <string name="users_reviews">Users Reviews</string>
    <string name="favorite">favorite</string>
    <string name="favorite_button">favorite</string>
    <string name="editor_insert_film_successful">Film saved</string>
    <string name="editor_delete_film_successful">Film deleted</string>

    <string name="editor_insert_film_failed">Error with saving film</string>
    <string name="editor_delete_film_failed">Error with deleting film</string>

    <string name="thumbnail_image_view_desc">Youtube Video thumbnail image view</string>
    <string name="no_data_available">no_data_available</string>
    <string name="offline_message">you are offline</string>
    <string name="back_online">Back online</string>
    <string name="image_description">film poster</string>
    <string name="action_search">search</string>
    <string name="video_search">Search Video</string>
    <string name="no_videos_available">no videos available</string>
    <string name="sort_criteria">sort criteria</string>
    <string name="delete_history">delete history</string>
    <string name="settings">setting</string>
    <string name="action_settings">settings activity</string>
    <string name="start_page_preference_title">continue where I left off</string>
    <string name="start_page_preference_key">home_page</string>
    <string name="theme_mood_preference_key">bright</string>
    <string name="theme_mood_preference_title">activate the bright mood</string>
</resources>