<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/sort_criteria"
        android:title="@string/sort_criteria">
        <menu>

            <item
                android:id="@+id/most_popular"
                android:orderInCategory="1"
                android:title="@string/most_popular" />
            <item
                android:id="@+id/highest_rated"
                android:title="@string/highest_rated" />
            <item
                android:id="@+id/favorite"
                android:title="@string/favorite" />
        </menu>
    </item>
    <item
        android:id="@+id/delete_history"
        android:title="@string/delete_history" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
</menu>