<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailActivity">

        <fragment
            android:id="@+id/youtube_player_fragment"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_fragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintLeft_toRightOf="@id/film_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Placeholder
                    android:id="@+id/place_holder"
                    android:layout_width="228dp"
                    android:layout_height="160dp"
                    android:background="@null"
                    app:layout_constraintLeft_toRightOf="@id/film_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/empty_view"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:text="@string/no_data_available"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/overview_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.75" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/loading_indicator"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintBottom_toTopOf="@id/overview_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/film_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="32dp"
                    android:contentDescription="@string/film_poster"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/place_holder" />

                <ImageView
                    android:id="@+id/film_image"
                    android:layout_width="140dp"
                    android:layout_height="210dp"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/film_poster"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/film_title"
                    style="@style/film_title_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#18ffff"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="title" />

                <ImageView
                    android:id="@+id/iv_favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintBottom_toTopOf="@id/overview_title"
                    app:layout_constraintRight_toRightOf="@id/vote_average" />

                <RatingBar
                    android:id="@+id/vote_average"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:numStars="10"
                    app:layout_constraintBottom_toTopOf="@id/film_backdrop"
                    app:layout_constraintLeft_toRightOf="@id/film_image" />

                <TextView
                    android:id="@+id/date"
                    style="@style/film_data_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shadowColor="#18ffff"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="6"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/film_title"
                    tools:text="@string/date" />

                <TextView
                    android:id="@+id/overview_title"
                    style="@style/film_heads_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/overview"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/film_backdrop" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/film_data_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview_title" />

                <TextView
                    android:id="@+id/user_review"
                    style="@style/film_heads_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/users_reviews"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/overview" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_review" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/internet_situation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>